<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal">

        <com.hjt.phoneshow.ui.cview.ClearEditText
            android:id="@+id/search_et_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/search_edittext_shape"
            android:drawableLeft="@mipmap/search_icon"
            android:drawablePadding="5dp"
            android:hint="@string/input_key"
            android:imeOptions="actionSearch"
            android:paddingRight="6dp"
            android:inputType="text"
            android:focusable="true"
            android:maxLength="6"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:background="@drawable/ripple_water"
            android:textColor="@android:color/white"
            android:textSize="16dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp">

                <TextView
                    android:id="@+id/tv_tip"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="left|center_vertical"
                    android:text="@string/seach_history" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_white"></View>

                <com.hjt.phoneshow.ui.cview.MyListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></com.hjt.phoneshow.ui.cview.MyListView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EEEEEE"></View>

            <TextView
                android:id="@+id/tv_clear"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:background="@drawable/ripple_water_item"
                android:text="@string/cancel_history" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:background="#EEEEEE"></View>
        </LinearLayout>

    </ScrollView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_edittext"
        android:background="@android:color/white"
        android:visibility="gone">
    </android.support.v7.widget.RecyclerView>

    <FrameLayout
        android:id="@+id/fl_search_nodata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_edittext"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_nodata" />
    </FrameLayout>

</RelativeLayout>